# internal/reimbursement/delivery/http/handler.go
@@ -30,6 +30,7 @@ type SubmitReimbursementRequest struct {
 // @Tags Reimbursement
 // @Accept json
 // @Produce json
+// @Param X-Request-ID header string false "Unique request ID"
 // @Security BearerAuth
 // @Param body body SubmitReimbursementRequest true "Data reimbursement (tanggal, jumlah, deskripsi)"
 // @Success 201 {string} string "created"
